--- a/teen-age-fashion-model.html
+++ b/teen-age-fashion-model.html
@@ -40,6 +40,9 @@
       <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
+          <a href="pdf/magazine/barbie-teen-age-fashion-model-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
+        </div>    
+        <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-teen-age-fashion-model-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
         </div>
 
