update comtent folder

--- a/barbie-dancing-doll.html
+++ b/barbie-dancing-doll.html
@@ -30,14 +30,14 @@
 
    <div class="hero-banner">
     <img src="images/banner-hero-dancing-doll.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Dancing Doll">
-    <img src="images/banner-dancing-doll__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Dancing Doll">
+    <img src="images/banner-hero-dancing-doll__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Dancing Doll">
    </div>
 
     <div class="container" style="max-width: 900px;">
       <h3 class="text-center">
         A timeless collection that celebrates Barbie's influence, the evolution of fashion, and female empowerment.
       </h3>
-      <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
+      <p class="text-center mt-3 font-weight-300">Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-dancing-doll-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
