--- a/barbie-totally-hair.html
+++ b/barbie-totally-hair.html
@@ -29,21 +29,21 @@
    <!--HERO BANNER-->
 
    <div class="hero-banner">
-    <img src="images/banner-hero-fashion-jeans-barbie.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Fashion Jeans">
-    <img src="images/banner-hero-fashion-jeans-barbie__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Fashion Jeans">
+    <img src="images/banner-hero-totally-hair-barbie.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Tottaly Hair Barbie">
+    <img src="images/banner-hero-totally-hair-barbie__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Tottaly Hair Barbie">
    </div>
 
     <div class="container" style="max-width: 900px;">
       <h3 class="text-center">
        A timeless collection that celebrates Barbie's influence, the evolution of fashion, and female empowerment.
       </h3>
-      <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
+      <p class="text-center mt-3 font-weight-300">Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
-          <a href="pdf/magazine/barbie-fashion-jeans-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
-        </div>
+          <a href="pdf/magazine/barbie-totally-hair-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
+        </div>        
         <div class="col-md-5 text-center">
-          <a href="pdf/magazine/barbie-fashion-jeans-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
+          <a href="pdf/magazine/barbie-totally-hair-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
         </div>
 
       </div>
