--- a/barbie-golden-dream.html
+++ b/barbie-golden-dream.html
@@ -37,7 +37,7 @@
       <h3 class="text-center">
        A timeless collection that celebrates Barbie's influence, the evolution of fashion, and female empowerment.
       </h3>
-      <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
+      <p class="text-center mt-3 font-weight-300">Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-golden-dream-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
