--- a/barbie-hot-skatin.html
+++ b/barbie-hot-skatin.html
@@ -29,21 +29,21 @@
    <!--HERO BANNER-->
 
    <div class="hero-banner">
-    <img src="images/banner-live-action-barbie.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Live Action">
-    <img src="images/banner-hero-live-action-barbie__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Live Action">
+    <img src="images/banner-hero-hot-skatin-barbie.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Hot Skatin">
+    <img src="images/banner-hero-hot-skatin-barbie__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Hot Skatin">
    </div>
 
     <div class="container" style="max-width: 900px;">
       <h3 class="text-center">
        A timeless collection that celebrates Barbie's influence, the evolution of fashion, and female empowerment.
       </h3>
-      <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
+      <p class="text-center mt-3 font-weight-300">Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
-          <a href="pdf/magazine/barbie-live-action-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
+          <a href="pdf/magazine/barbie-hot-skatin-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
         </div>
         <div class="col-md-5 text-center">
-          <a href="pdf/magazine/barbie-live-action-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
+          <a href="pdf/magazine/barbie-hot-skatin-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
         </div>
 
       </div>
