--- a/barbie-malibu.html
+++ b/barbie-malibu.html
@@ -30,14 +30,14 @@
 
    <div class="hero-banner">
     <img src="images/banner-hero-barbie-malibu.jpg" class="d-none d-lg-block" style="width: 100%;" alt="Barbie Malibu">
-    <img src="images/banner-barbie-malibu__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Barbie Malibu">
+    <img src="images/banner-hero-barbie-malibu__mobile.jpg" class="d-ms-block d-lg-none" style="width: 100%;" alt="Barbie Malibu">
    </div>
 
     <div class="container" style="max-width: 900px;">
       <h3 class="text-center">
         A timeless collection that celebrates Barbie's influence, the evolution of fashion, and female empowerment.
       </h3>
-      <p class="text-center mt-3"> Join the world's most famous doll on a journey through her most iconic designs.</p>
+      <p class="text-center mt-3 font-weight-300">Join the world's most famous doll on a journey through her most iconic designs.</p>
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-malibu-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
