update french magazines

--- a/barbie-enchanted-evening.html
+++ b/barbie-enchanted-evening.html
@@ -41,7 +41,10 @@
       <div class="row justify-content-center mt-5">
         <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-enchanted-evening-eng.pdf" download><button class="bn632-hover bn27">Download English Magazine</button></a>
-        </div>    
+        </div>   
+        <div class="col-md-5 text-center">
+          <a href="pdf/magazine/barbie-enchanted-evening-fr.pdf" download><button class="bn632-hover bn27">Download French Magazine</button></a>
+        </div> 
       </div>
     </div>
 
