--- a/barbie-teen-age-fashion-model.html
+++ b/barbie-teen-age-fashion-model.html
@@ -45,6 +45,9 @@
         <div class="col-md-5 text-center">
           <a href="pdf/magazine/barbie-teen-age-fashion-model-esp.pdf" download><button class="bn632-hover bn27">Download Spanish Magazine</button></a>
         </div>
+        <div class="col-md-5 text-center">
+          <a href="pdf/magazine/barbie-teen-age-fashion-model-fr.pdf" download><button class="bn632-hover bn27">Download French Magazine</button></a>
+        </div>
 
       </div>
     </div>
